interests/int_pages.css
#section1{
    background-image: url("../images/manchester.jpg");
    background-size: cover;
}

#section2{
    background-image: url("../images/boston.jpg");
    background-size: cover;
}

#section3{
    background-image: url("../images/Cork.jpg");
    background-size: cover;
}

#section4{
    background-image: url("../images/cloud.jpg");
    background-size: cover;
}

#section5{
    background-image: url("../images/cloud.jpg");
    background-size: cover;
    text-decoration: none;
}

#section6{
    background-image: url("../images/cloud.jpg");
    background-size: cover;
    text-decoration: none;
}

.section{
    text-align: center;
    color: white;
    text-decoration: underline;
}

.section li{
    float: none;
}

.section ul{
    list-style-type: none;
}

